# SampleRecorder

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FileSaver.cpp  FileSaver.h  MicRecorder.cpp  MicRecorder.h  RecordedSample.h  SamplePlayer.cpp  SamplePlayer.h  samplerecorder.cpp
app/src/main/kotlin/nay/kirill/samplerecorder/: MainActivity.kt  MainApplication.kt
app/src/main/kotlin/nay/kirill/samplerecorder/data/: DataModule.kt  ResourceManagerImpl.kt  SampleRepositoryImpl.kt
app/src/main/kotlin/nay/kirill/samplerecorder/data/repository/: LayersRepositoryImpl.kt  SampleRepositoryImpl.kt
app/src/main/kotlin/nay/kirill/samplerecorder/di/: MainModule.kt
app/src/main/kotlin/nay/kirill/samplerecorder/domain/: GetSamplesUseCase.kt  Player.kt  ResourceManager.kt  Sample.kt  SampleRepository.kt  SampleType.kt
app/src/main/kotlin/nay/kirill/samplerecorder/domain/model/: Layer.kt  Sample.kt  SampleType.kt
app/src/main/kotlin/nay/kirill/samplerecorder/domain/repository/: LayersRepository.kt  SampleRepository.kt
app/src/main/kotlin/nay/kirill/samplerecorder/domain/usecase/: ClearLayersUseCase.kt  CreateLayerUseCase.kt  CreateVoiceSample.kt  CreateVoiceSampleUseCase.kt  GetSamplesUseCase.kt  ObserveLayersUseCase.kt  RemoveLayerUseCase.kt  SaveLayerUseCase.kt  SetPlayingLayerUseCase.kt
app/src/main/kotlin/nay/kirill/samplerecorder/main/: MainIntent.kt  MainScreen.kt  MainState.kt  MainStateConverter.kt  MainUIState.kt  MainViewModel.kt
app/src/main/kotlin/nay/kirill/samplerecorder/main/playerController/: PlayerController.kt  PlayerControllerState.kt  PlayerTimeline.kt
app/src/main/kotlin/nay/kirill/samplerecorder/main/playerTimeline/: PlayerTimeline.kt  PlayerTimelineState.kt
app/src/main/kotlin/nay/kirill/samplerecorder/main/sampleChooser/: SampleChooser.kt  SampleChooserState.kt  SampleChooserUIState.kt
app/src/main/kotlin/nay/kirill/samplerecorder/player/: AmplitudeConverter.kt  PlayerImpl.kt  PlayerModule.kt
app/src/main/kotlin/nay/kirill/samplerecorder/presentation/: LayersBottomSheet.kt  MainActivity.kt  MainApplication.kt  MainIntent.kt  MainScreen.kt  MainState.kt  MainStateConverter.kt  MainUIState.kt  MainViewModel.kt
app/src/main/kotlin/nay/kirill/samplerecorder/presentation/audioController/: AudioController.kt  AudioControllerState.kt
app/src/main/kotlin/nay/kirill/samplerecorder/presentation/di/: MainModule.kt
app/src/main/kotlin/nay/kirill/samplerecorder/presentation/main/: ArtAnimationManager.kt  LayersBottomSheet.kt  MainEvent.kt  MainIntent.kt  MainScreen.kt  MainState.kt  MainStateConverter.kt  MainUIState.kt  MainViewModel.kt
app/src/main/kotlin/nay/kirill/samplerecorder/presentation/playerController/: PlayerController.kt  PlayerControllerState.kt
app/src/main/kotlin/nay/kirill/samplerecorder/theme/: Theme.kt  Type.kt
app/src/main/res/drawable/: art_1.xml  art_4.xml  art_8.xml  ic_audio_wave.xml  ic_drums_sample.xml  ic_guitar_sample.xml  ic_launcher_foreground.xml  ic_microphone.xml  ic_record.xml  ic_remove.xml  ic_trumpet_sample.xml
app/src/main/res/drawable/myiconpack/: Drumsticks-svgrepo-com.kt  Trumpet-svgrepo-com.kt  Ukelele-svgrepo-com.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/kotlin/nay/kirill/samplerecorder/player/: AmplitudeConverterTest.kt
gradle/wrapper/: gradle-wrapper.properties
iolib/: build.gradle.kts
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: OneShotSampleSource.cpp  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h
parselib/: build.gradle.kts
parselib/src/main/cpp/: CMakeLists.txt
resampler/: build.gradle.kts
resampler/src/main/cpp/: CMakeLists.txt
(+19 files in other folders)
